
[CORRIGÉ]   -   Quand on supprime une entreprise et qu'ensuite on se connecte à une personne employée dans cette entreprise -> segt fault
                -> rajouter qu'à la suppression d'une entreprise, il faut passer tous ses employes en recherche d'emploi

[CORRIGÉ]   -   Une personne peut s'auto ajouter dans son réseau de collègue (Mickey est ami avec Mickey, narcissique le gars)

-   Quand on veut supprimer un collègue d'une personne ayant 5 collègues -> segt fault

[CORRIGÉ]   -   Quand une personne fait une recherche de poste par compétences, si il y a plusieurs postes qui match, ne renvoit que le premier

[CORRIGÉ]   -   Quand une personne fait une recherche de poste par compétences et code, si il y a plusieurs postes qui match, ne renvoit que le premier

[CORRIGÉ]   -   Quand une personne fait une recherche de collègue par entreprise, si cette personne a 5 amis -> segt fault

[CORRIGÉ]   -   Recherche collègue par compétence -> segt fault de temps en temps (j'ai pas encore bien identifié quand) et en fait ça correspond pas bien à la consigne 

[CORRIGÉ]   -   Si un poste à X compétences et que la personne à les mêmes X compétences, le poste va s'afficher X fois dans le résultat de la recherche

[CORRIGÉ]   - Les fonctions d'ajout au journal des recherches ne sont plus bonnes et celles des menus aussi du coup


==========================================================================================================================================================================
||  Idées de choses à ajouter / modifier (si vous en faites une, mettez [FAIT] ou [CORRIGÉ] devant le tiret correspondant)
==========================================================================================================================================================================
[FAIT]      -   Le récapitulatif quand on créé un profil personne est incomplet. On peut rajouter la liste des compétences et des collègues
